# haskell-playground

./: Paths_haskell_playground.hs  haskell-playground.cabal
src/: AOC2021.hs  Main.hs  Scratch.hs  TypeClassesPresentation.hs  TypesPresentation.hs
